# CodeBot

./: .gitignore  Cargo.toml  README.MD
daemon/: Cargo.toml
daemon/src/: embed_client.rs  indexer.rs  llm.rs  main.rs  prompt.rs  storage.rs
extension/: package.json
extension/src/: extension.ts
ml-service/: app.py  requirements.txt
src/: api.rs  embed_client.rs  indexer.rs  lib.rs  llm.rs  main.rs  orchestrator.rs  prompt.rs  retrieval.rs  server.rs  storage.rs  tools.rs  verifier.rs  watcher.rs
