[package]
name = "codebot-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
notify = "6"
notify-debouncer-full = "0.3"
ignore = "0.4"          # gitignore-aware walking
reqwest = { version = "0.12", features = ["json"] }
tantivy = "0.22"
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.22"
tree-sitter-java = "0.21"
tree-sitter-c-sharp = "0.21"
tree-sitter-go = "0.21"
blake3 = "1"            # fast content hashing for incremental invalidation
similar = "2"           # diff generation/preview
diffy = "0.5"           # tolerant unified-diff parsing
sqlite-vec = "0.1"      # vec0 virtual table for native ANN KNN
parking_lot = "0.12"
dashmap = "6"
# In-process embeddings + reranking (ONNX runtime, models fetched from HF on first run).
# Default features drag in image-model codecs we don't need, so enable only text + binaries.
fastembed = { version = "5.17.2", default-features = false, features = ["hf-hub-native-tls", "ort-download-binaries-native-tls"] }
eframe = "0.34.3"
